<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/result_textView"
            android:layout_weight="2"
            android:layout_height="@dimen/size_zero_dp"
            android:layout_width="fill_parent"
            android:text="@string/empty"
            android:textSize="@dimen/text_size_sp"
            android:gravity="center_vertical"
            android:textIsSelectable="true">
        </TextView>
        <LinearLayout
            android:id="@+id/layout_row_0"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/size_zero_dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_clear"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />
            <Button
                android:id="@+id/but_clear_element"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/clear_element"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_equal"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_row_1"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/size_zero_dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/but_one"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:textSize="@dimen/text_size_sp"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_two"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_three"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_plus"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_row_2"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/size_zero_dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/but_four"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textSize="@dimen/text_size_sp"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_five"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_six"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_minus"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_row_3"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/size_zero_dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/but_seven"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:textSize="@dimen/text_size_sp"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_eight"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_nine"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_multiply"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_row_4"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/size_zero_dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/but_point"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:textSize="@dimen/text_size_sp"
                tools:ignore="NestedWeights"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_zero"
                android:layout_weight="3"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/but_divide"
                android:layout_weight="1"
                android:layout_width="@dimen/size_zero_dp"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:textSize="@dimen/text_size_sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>